--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Mon site</title>
-  <link rel="icon" type="image/svg+xml" href="image/logoT2.svg">
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <h1>Hello Transcendence 😜</h1>
-
-	<p>
-			<ul>
-				<li><a href="#pong">Pong Game</a></li>
-			</ul>	
-	</p>
-	<p>Ceci est une page test donc tout peut etre modifier !!!</p>
-
-	<h2 id="pong">Pong Game</h2>
-	<p>
-		Plus qu'a mettre le pong ici.
-	</p>
-
-  <script src="script.js"></script>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Transcendence - Home</title>
+		<link rel="stylesheet" href="./styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<div id="bg"></div>
+		<main id="app"></main>
+		<login-modal></login-modal>
+		<script type="module" src="main.js"></script>
+	</body>
 </html>
