--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Transcendence - Home</title>
-		<link rel="stylesheet" href="./styles.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<div id="bg"></div>
-		<main id="app"></main>
-		<login-modal></login-modal>
-		<script type="module" src="main.js"></script>
-	</body>
+<html lang="fr">
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>ft_transcendence</title>
+	<link rel="stylesheet" href="/styles.css" />
+</head>
+
+<body>
+	<div id="app"></div>
+	<script type="module" src="/js/index.js"></script>
+</body>
+
 </html>
